[package]
name = "loadtest-populate-mongodb"
version = "0.1.0"
edition = "2021"
description = "MongoDB populator for load testing surreal-sync"
license = "MIT"

[dependencies]
sync-core = { path = "../sync-core" }
loadtest-generator = { path = "../loadtest-generator" }
loadtest-populate = { path = "../loadtest-populate" }
mongodb-types = { path = "../mongodb-types" }

clap = { version = "4.5", features = ["derive", "env"] }
mongodb = "3.2"
bson = { version = "2.15", features = ["chrono-0_4", "uuid-1"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
