[package]
name = "loadtest-populate-mysql"
version = "0.1.0"
edition = "2021"
description = "MySQL populator for load testing surreal-sync"
license = "MIT"

[dependencies]
sync-core = { path = "../sync-core" }
loadtest-generator = { path = "../loadtest-generator" }
loadtest-populate = { path = "../loadtest-populate" }
loadtest-distributed = { path = "../loadtest-distributed" }
mysql-types = { path = "../mysql-types" }

clap = { version = "4.5", features = ["derive", "env"] }
mysql_async = { version = "0.34" }
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
