[package]
name = "loadtest-populate-mysql"
version = "0.6.0"
edition = "2021"
publish = false
description = "MySQL populator for load testing surreal-sync"
license = "MIT"

[dependencies]
surreal-sync-core = { path = "../sync-core" }
loadtest-generator = { path = "../loadtest-generator" }
loadtest-populate = { path = "../loadtest-populate" }
loadtest-distributed = { path = "../loadtest-distributed" }
surreal-sync-mysql = { path = "../mysql" }

clap = { version = "4.5", features = ["derive", "env"] }
mysql_async = { version = "0.36", default-features = false, features = ["derive", "rustls-tls", "tls12", "aws-lc-rs", "minimal"] }
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
