[package]
name = "loadtest-populate-postgresql"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL populator for load testing surreal-sync"
license = "MIT"

[dependencies]
sync-core = { path = "../sync-core" }
loadtest-generator = { path = "../loadtest-generator" }
loadtest-populate = { path = "../loadtest-populate" }
loadtest-distributed = { path = "../loadtest-distributed" }
postgresql-types = { path = "../postgresql-types" }

clap = { version = "4.5", features = ["derive", "env"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1", "with-geo-types-0_7"] }
geo-types = "0.7"
postgres-types = { version = "0.2" }
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rust_decimal = { version = "^1.23", features = ["db-tokio-postgres"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
