[package]
name = "loadtest-verify-surreal3"
version = "0.1.0"
edition = "2021"
description = "Streaming verifier for load testing surreal-sync (SurrealDB v3)"
license = "MIT"

[dependencies]
sync-core = { path = "../sync-core" }
loadtest-generator = { path = "../loadtest-generator" }
surreal3-types = { path = "../surreal3-types" }

clap = { version = "4.5", features = ["derive", "env"] }
surrealdb3 = { version = "3.0.0-beta.2", package = "surrealdb", features = ["protocol-ws", "kv-mem"] }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.37"
base64 = "0.22"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
