[package]
name = "loadtest-verify"
version = "0.1.0"
edition = "2021"
description = "Streaming verifier for load testing surreal-sync"
license = "MIT"

[dependencies]
sync-core = { path = "../sync-core" }
loadtest-generator = { path = "../loadtest-generator" }
surrealdb-types = { path = "../surrealdb-types" }

clap = { version = "4.5", features = ["derive", "env"] }
surrealdb = { version = "2.3.7", features = ["protocol-ws", "kv-mem"] }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
